enable collector by default

--- a/charts/k8s-integration/values.yaml
+++ b/charts/k8s-integration/values.yaml
@@ -54,5 +54,5 @@ static-sbom:
     metrics:
       interval: "" # Set empty to allow global value inheritance or user override
 
-  collector:
-    enabled: false
+collector:
+  enabled: true
