--- a/charts/static-sbom/values.yaml
+++ b/charts/static-sbom/values.yaml
@@ -22,7 +22,7 @@ miggo:
   clusterName: "kubernetes-cluster"
 
 config:
-  updaterCron: "0 0 */6 * *"
+  updaterCron: "0 */6 * * *"
   updaterEnabled: true
   queueSize: 10000
   disableCompression: false
