--- a/charts/dynamic-ebpf/templates/serviceaccount.yaml
+++ b/charts/dynamic-ebpf/templates/serviceaccount.yaml
@@ -1,8 +1,13 @@
+{{- if .Values.serviceAccount.create -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "dynamic-ebpf.fullname" . }}-dynamic-ebpf
+  name: {{ include "dynamic-ebpf.serviceAccountName" . }}
   labels:
-  {{- include "dynamic-ebpf.labels" . | nindent 4 }}
+    {{- include "dynamic-ebpf.labels" . | nindent 4 }}
+  {{- with .Values.serviceAccount.annotations }}
   annotations:
-    {{- toYaml .Values.dynamicEbpf.serviceAccount.annotations | nindent 4 }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+automountServiceAccountToken: {{ .Values.serviceAccount.automount }}
+{{- end }}
