--- a/charts/k8s-integration/Chart.yaml
+++ b/charts/k8s-integration/Chart.yaml
@@ -13,6 +13,10 @@ dependencies:
     condition: static-sbom.enabled
     repository: file://../static-sbom
     version: "*"
+  - name: dynamic-ebpf
+    condition: dynamic-ebpf.enabled
+    repository: file://../dynamic-ebpf
+    version: "*"
   - name: collector
     condition: collector.enabled
     repository: file://../miggo-collector
