--- a/charts/k8s-integration/Chart.yaml
+++ b/charts/k8s-integration/Chart.yaml
@@ -13,9 +13,9 @@ dependencies:
     condition: static-sbom.enabled
     repository: file://../static-sbom
     version: "*"
-  - name: dynamic-ebpf
-    condition: dynamic-ebpf.enabled
-    repository: file://../dynamic-ebpf
+  - name: miggo-sensor
+    condition: miggo-sensor.enabled
+    repository: file://../miggo-sensor
     version: "*"
   - name: collector
     condition: collector.enabled
