--- a/charts/miggo-sensor/Chart.yaml
+++ b/charts/miggo-sensor/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
-name: dynamic-ebpf
-description: A Helm chart for miggo's dynamic-ebpf
+name: miggo-sensor
+description: A Helm chart for miggo's miggo-sensor
 type: application
 version: 0.1.19
 appVersion: "0.0.1"
