--- a/charts/miggo-sensor/templates/serviceaccount.yaml
+++ b/charts/miggo-sensor/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "dynamic-ebpf.serviceAccountName" . }}
+  name: {{ include "miggo-sensor.serviceAccountName" . }}
   labels:
-    {{- include "dynamic-ebpf.labels" . | nindent 4 }}
+    {{- include "miggo-sensor.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
