--- a/charts/k8s-integration/templates/otlp-secret.yaml
+++ b/charts/k8s-integration/templates/otlp-secret.yaml
@@ -1,4 +1,4 @@
-{{- if (not (empty (.Values.output.otlp.httpAuthHeader))) }}
+{{- if .Values.output.otlp.httpAuthHeader }}
 apiVersion: v1
 kind: Secret
 metadata:
