--- a/charts/k8s-integration/templates/collector/serviceaccount.yaml
+++ b/charts/k8s-integration/templates/collector/serviceaccount.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "k8s-integrations.serviceAccountName" . }}
+  name: {{ include "k8s-integrations.serviceAccountName" . }}-collector
   labels:
     {{- include "miggo-collector.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
