--- a/charts/k8s-integration/templates/k8s-read/deployment.yaml
+++ b/charts/k8s-integration/templates/k8s-read/deployment.yaml
@@ -64,7 +64,7 @@ spec:
             - --tls-skip-verify={{ (include "otlpTlsSkipVerify" .) }}
             - --stdout={{ .Values.output.stdout }}
             - --port={{ .Values.healthcheck.port }}
-            - --metric-otlp-endpoint={{ (include "otlpEndpointHealthCheckPort" .) }}
+            - --metric-otlp-endpoint={{ (include "otlpEndpoint" .) }} 
             - --metric-tls-skip-verify={{ (include "otlpTlsSkipVerify" .) }}
             - --metric-interval={{ .Values.config.metrics.interval }}
             - --interval={{ .Values.k8sRead.config.interval }}
@@ -75,7 +75,7 @@ spec:
           {{- if .Values.output.otlp.existingSecret }}
           - secretRef:
               name: {{ .Values.output.otlp.existingSecret }}
-          {{- else if (not (empty ( .Values.output.otlp.authHeader ))) }}
+          {{- else if .Values.output.otlp.authHeader }}
           - secretRef:
               name: otlp-secret
           {{- end }}
