--- a/charts/k8s-integration/templates/updater/updater.yaml
+++ b/charts/k8s-integration/templates/updater/updater.yaml
@@ -15,18 +15,21 @@ spec:
           - name: kubectl
             image: bitnami/kubectl
             command: ["/bin/bash", "-c"]
-            args: |
-              {{ if .Values.k8sRead.enabled }}
-              kubectl rollout restart deployment/{{ include "k8s-integrations.fullname" . }}-k8s-read
-              {{ end }}
-              {{ if .Values.staticSbom.enabled }}
-              kubectl rollout restart deployment/{{ include "k8s-integrations.fullname" . }}-static-sbom
-              {{ end }}
-              {{ if .Values.sensor.enabled }}
-              kubectl rollout restart deployment/{{ include "k8s-integrations.fullname" . }}-sensor
-              {{ end }}
-              {{ if .Values.collector.enabled }}
-              kubectl rollout restart deployment/{{ include "k8s-integrations.fullname" . }}-collector
-              {{ end }}
+            args: 
+              - |
+                #/bin/bash
+                
+                {{ if .Values.k8sRead.enabled }}
+                kubectl rollout restart deployment/{{ include "k8s-integrations.fullname" . }}-k8s-read
+                {{ end }}
+                {{ if .Values.staticSbom.enabled }}
+                kubectl rollout restart deployment/{{ include "k8s-integrations.fullname" . }}-static-sbom
+                {{ end }}
+                {{ if .Values.sensor.enabled }}
+                kubectl rollout restart deployment/{{ include "k8s-integrations.fullname" . }}-sensor
+                {{ end }}
+                {{ if .Values.collector.enabled }}
+                kubectl rollout restart deployment/{{ include "k8s-integrations.fullname" . }}-collector
+                {{ end }}
           restartPolicy: Never
 {{ end }}
