--- a/charts/k8s-integration/templates/collector/deployment.yaml
+++ b/charts/k8s-integration/templates/collector/deployment.yaml
@@ -34,6 +34,7 @@ spec:
         {{- tpl (toYaml .) $ | nindent 8 }}
         {{- end }}
       labels:
+        component: collector
         app: {{ include "k8s-integrations.fullname" . }}-collector
         {{- include "miggo-collector.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
