--- a/charts/k8s-integration/templates/sensor/daemonset.yaml
+++ b/charts/k8s-integration/templates/sensor/daemonset.yaml
@@ -32,6 +32,7 @@ spec:
         {{- tpl (toYaml .) $ | nindent 8 }}
       {{- end }}
       labels:
+        component: sensor
         {{- include "sensor.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
         {{- tpl (toYaml .) $ | nindent 8 }}
