--- a/charts/k8s-integration/templates/static-sbom/deployment.yaml
+++ b/charts/k8s-integration/templates/static-sbom/deployment.yaml
@@ -33,6 +33,7 @@ spec:
         {{- tpl (toYaml .) $ | nindent 8 }}
         {{- end }}
       labels:
+        component: static-sbom
         {{- include "static-sbom.labels" . | nindent 8 }}
         {{- with .Values.podLabels }}
         {{- tpl (toYaml .) $ | nindent 8 }}
