--- a/charts/k8s-integration/values.yaml
+++ b/charts/k8s-integration/values.yaml
@@ -88,7 +88,7 @@ affinity: {}
 
 k8sRead:
   # -- Enable K8s Read component
-  enabled: true
+  enabled: false
   # -- Component-specific labels
   labels: {}
   # -- Component-specific annotations
@@ -128,7 +128,7 @@ k8sRead:
 
 staticSbom:
   # -- Enable Static SBOM component
-  enabled: true
+  enabled: false
   # -- Component-specific labels
   labels: {}
   # -- Component-specific annotations
@@ -180,7 +180,7 @@ staticSbom:
 
 sensor:
   # -- Enable Sensor component
-  enabled: true
+  enabled: false
   # -- Kubernetes cluster domain
   kubernetesClusterDomain: ""
   # -- Additional environment variables
