fix tests and readme

--- a/charts/k8s-integration/tests/disable-all/values.yaml
+++ b/charts/k8s-integration/tests/disable-all/values.yaml
@@ -1,10 +1,10 @@
-k8s-read:
+k8sRead:
   enabled: false
 
-static-sbom:
+staticSbom:
   enabled: false
 
-miggo-sensor:
+sensor:
   enabled: false
 
 collector:
