--- a/charts/k8s-integration/templates/updater/role.yaml
+++ b/charts/k8s-integration/templates/updater/role.yaml
@@ -2,7 +2,7 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
-  name: updater-role
+  name: miggo-updater-role
 rules:
 - apiGroups: ["apps"]
   resources: ["deployments"]
