--- a/charts/k8s-integration/templates/updater/rolebinding.yaml
+++ b/charts/k8s-integration/templates/updater/rolebinding.yaml
@@ -2,13 +2,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
-  name: updater-binding
+  name: miggo-updater-binding
 subjects:
 - kind: ServiceAccount
   name: {{ include "k8s-integrations.serviceAccountName" . }}-updater
   namespace: {{ .Release.Namespace }}
 roleRef:
   kind: Role
-  name: updater-role
+  name: miggo-updater-role
   apiGroup: rbac.authorization.k8s.io
 {{ end }}
